fix image vertical stretch

--- a/style.css
+++ b/style.css
@@ -363,3 +363,9 @@ nav {
     box-sizing: border-box;
   }
 }
+
+@media screen and (max-width: 460px) {
+  .card, #projects-2 > .card {
+    width: 100%;
+  }
+}
